Massive link correction

--- a/_posts/2020-01-21-2019-in-review.md
+++ b/_posts/2020-01-21-2019-in-review.md
@@ -7,13 +7,13 @@ author: "Reuben Yap"
 img: ""
 alt: ""
 ---
-The year 2019 was a very eventful year for Zcoin with our long awaited [Sigma](what-is-sigma.html) privacy protocol coming alive, lots of new exchange listings, integrations and the unveiling of Lelantus the result of many months of research. As we enter 2020 and an exciting time in the cryptosphere, we wish to look back on what we have achieved.
+The year 2019 was a very eventful year for Zcoin with our long awaited [Sigma](https://www.firo.org/2019/03/20/what-is-sigma.html) privacy protocol coming alive, lots of new exchange listings, integrations and the unveiling of Lelantus the result of many months of research. As we enter 2020 and an exciting time in the cryptosphere, we wish to look back on what we have achieved.
 
 ##Technology
 
 ###Sigma
 
-We finally went live with our Sigma mainnet in July 2019 which was the culmination of our commitment in 2017 to [remove trusted setup from the original Zerocoin protocol.]() Sigma greatly improved scalability with proof sizes that were 16x smaller than Zerocoin and we are already seeing much increased usage of the protocol vs our original Zerocoin protocol.
+We finally went live with our Sigma mainnet in July 2019 which was the culmination of our commitment in 2017 to [remove trusted setup from the original Zerocoin protocol.](https://www.firo.org/2017/04/21/zcoin-moving-beyond-trusted-setup-in-zerocoin.html) Sigma greatly improved scalability with proof sizes that were 16x smaller than Zerocoin and we are already seeing much increased usage of the protocol vs our original Zerocoin protocol.
 
 The Sigma release also came with a much easier interface to mint and spend that automated the process of picking denominations and enforced certain best practices like reminting change greatly improving privacy.
 
