Small spelling fix

--- a/_posts/2021-01-09-2020-in-review.md
+++ b/_posts/2021-01-09-2020-in-review.md
@@ -99,7 +99,7 @@ We also had tons of interviews or features from prominent channels in the space 
 
 just to name a few!
 
-[Coindesk](https://www.coindesk.com/privacycoin-zcoin-burn-redeem-testnet), [Modern Consensus](https://modernconsensus.com/cryptocurrencies/zcoin-bumps-up-privacy-with-ability-to-burn-and-redeem-coins/), [Grant Hawkins](https://youtu.be/sV1zjhtTav8) ran peaces on Lelantus.
+[Coindesk](https://www.coindesk.com/privacycoin-zcoin-burn-redeem-testnet), [Modern Consensus](https://modernconsensus.com/cryptocurrencies/zcoin-bumps-up-privacy-with-ability-to-burn-and-redeem-coins/), [Grant Hawkins](https://youtu.be/sV1zjhtTav8) ran pieces on Lelantus.
 
 Firo was invited to present at [#Mainnet2020 with Messari](https://www.youtube.com/watch?v=ejZk_CED7FQ&feature=youtu.be) giving a presentation on the Firo project, and at [Monero Village Defcon](https://www.youtube.com/channel/UCKxLNPJeEjPXOke55i5AIXA) we spoke on “Giving competition to Monero by ditching opt-in privacy.” Reuben Yap, Firo’s Project Steward was a panelist on [CryptoMondaysVR](https://www.youtube.com/watch?v=7Y2hclziAd8) discussing “The future of money beyond 2020.”
 
