Small grammar fix

--- a/_posts/2021-01-09-2020-in-review.md
+++ b/_posts/2021-01-09-2020-in-review.md
@@ -72,7 +72,7 @@ The vast majority of these exchanges listed us on their own accord, or via commu
 
 We [joined the Ren Alliance as a utility partner](https://medium.com/renproject/ren-ecosystem-update-aeef144a52e0), was the first coin after Bitcoin to be added as a funding option to the [Particl Decentralized Marketplace](https://particl.io/)!
 
-[Firo was also the is the first asset supported on the Stakehound](https://firo.org/2020/09/02/bridging-into-defi-with-stakehound-partnership.html) platform that unlocks liquidity in Firo’s Masternodes and bridges us into the DeFi ecosystem.
+[Firo was the first asset supported on the Stakehound](https://firo.org/2020/09/02/bridging-into-defi-with-stakehound-partnership.html) platform that unlocks liquidity in Firo’s Masternodes and bridges us into the DeFi ecosystem.
 
 [Zelcore and Firo partnered](https://medium.com/@ZelOfficial/zelcore-zcoin-masternodes-d4223e3d8c8b) to bring an easy way to create, view, and manage your FIRO nodes all in one place!
 
