--- a/_posts/2023-01-12-firo-v014120.md
+++ b/_posts/2023-01-12-firo-v014120.md
@@ -8,7 +8,7 @@ img: "/blog/assets/firo-new-software-release.png"
 ---
 This is a mandatory update extending emergency switch support for one more year per [community decision](https://forum.firo.org/t/emergency-switch-functionality-for-lelantus-lelantus-spark-to-extend-or-retire/2749).
 
-Please update your software before block 608035 (approximately January 14th, 4pm UTC) to avoid any potential issues. Failure to update before this block will require you to reindex.
+Please update your software before **block 608035 (approximately January 14th, 4pm UTC)** to avoid any potential issues. Failure to update before this block will require you to reindex.
 
 This release includes several bug fixes, including:
 
@@ -19,4 +19,6 @@ This release includes several bug fixes, including:
 
 You can download the update from the [Firo website](https://firo.org/get-firo/download/)
 
-We appreciate your continued support and feedback.
+As usual, please **backup your wallet** prior to updating for safety.
+
+We appreciate your continued support.
