--- a/_posts/2023-01-12-firo-v014120.md
+++ b/_posts/2023-01-12-firo-v014120.md
@@ -8,7 +8,7 @@ img: "/blog/assets/firo-new-software-release.png"
 ---
 This is a mandatory update extending emergency switch support for one more year per [community decision](https://forum.firo.org/t/emergency-switch-functionality-for-lelantus-lelantus-spark-to-extend-or-retire/2749).
 
-Please update your software before **block 608035 (approximately January 14th, 4pm UTC)** to avoid any potential issues. Failure to update before this block will require you to reindex.
+Please update your software before **block 608035 (approximately January 14th, 4pm UTC)** to avoid any potential issues. Updating after this block will require a reindex.
 
 This release includes several bug fixes, including:
 
@@ -17,7 +17,7 @@ This release includes several bug fixes, including:
 * A fix for the UI size in Ubuntu (issue [#1210](https://github.com/firoorg/firo/pull/1210))
 * An option to hide/unhide RAP Addresses page manually (issue [#1208](https://github.com/firoorg/firo/pull/1208))
 
-You can download the update from the [Firo website](https://firo.org/get-firo/download/)
+You can download the update from the [Firo website](https://firo.org/get-firo/download/).
 
 As usual, please **backup your wallet** prior to updating for safety.
 
