--- a/_posts/2023-03-24-firo014121-rab13s.md
+++ b/_posts/2023-03-24-firo014121-rab13s.md
@@ -15,3 +15,5 @@ We would like to thank Binance’s tech team for alerting us to this that allowe
 We recommend an immediate update. The upgrade should be just a simple drop-in update with no need to reindex.
 
 As usual, please **backup your wallet** prior to updating for safety.
+
+Download [Here](https://github.com/firoorg/firo/releases/tag/v0.14.12.1)
