fix all internal links

--- a/_posts/2020-01-21-2019-in-review.md
+++ b/_posts/2020-01-21-2019-in-review.md
@@ -25,7 +25,7 @@ Most importantly our research and work into Sigma also set the foundation for ou
 
 ### Lelantus
 
-In April 2019, we revealed our academic paper of [Lelantus](https://firo.org/2019/04/14/lelantus-firo.html) which was the result of our research in finding innovative solutions to improve privacy and is the work of our cryptographer Aram Jivanyan. It uses Sigma as a building block but allows users to burn any arbitrary amount and also to partially redeem mints greatly improving privacy. Lelantus solves the issues of using fixed denominations and closes off a lot of timing side channel analysis. This research garnered a lot of interest with competing privacy projects like Monero Research Labs looking at it as a possible scaling solution for their ring signatures and Beam announcing that it would be their solution to address the privacy drawbacks of Mimblewimble.
+In April 2019, we revealed our academic paper of [Lelantus]({{ site.baseurl }}/2019/04/14/lelantus-firo.html) which was the result of our research in finding innovative solutions to improve privacy and is the work of our cryptographer Aram Jivanyan. It uses Sigma as a building block but allows users to burn any arbitrary amount and also to partially redeem mints greatly improving privacy. Lelantus solves the issues of using fixed denominations and closes off a lot of timing side channel analysis. This research garnered a lot of interest with competing privacy projects like Monero Research Labs looking at it as a possible scaling solution for their ring signatures and Beam announcing that it would be their solution to address the privacy drawbacks of Mimblewimble.
 
 In October 2019, we further improved upon this by [enabling full direct anonymous transfers in Lelantus.](https://www.firo.org/2019/10/03/direct-untraceable-anonymous-lelantus.html) This means that instead of having to redeem coins into the transparent layer, you can now give the right to redeem coins to third parties without having to redeem it into the transparent layer. We still are working on further ways to improve Lelantus and expand its capabilities
 
