--- a/_posts/2021-01-09-2020-in-review.md
+++ b/_posts/2021-01-09-2020-in-review.md
@@ -30,7 +30,7 @@ This explanation from Diego Salazar, the designer behind our new logo and name, 
 
 On the 14th of September Firo had it first supply halving. Firo follows Bitcoin’s supply schedule which halves approximately every 4 years. Satoshi’s rationale of halving is to start a coin with a wide distribution, then taper inflation off to become a deflationary asset. As part of the first halving, the total block rewards dropped from 25 FIRO per block to 12.5 FIRO per block.
 
-As from the results of [a year long discussion with the community](https://forum.zcoin.io/t/important-final-chance-to-weigh-in-on-development-community-funding-percentage/636), the block rewards are being adjusted as a balance between continuing development, masternodes and miners. You can read more about this [here](https://firo.org/2020/05/04/block-reward-allocation-and-development-fund-for-the-next-4-years.html).
+As from the results of [a year long discussion with the community](https://forum.zcoin.io/t/important-final-chance-to-weigh-in-on-development-community-funding-percentage/636), the block rewards are being adjusted as a balance between continuing development, masternodes and miners. You can read more about this [here]({{ site.baseurl }}/2020/05/04/block-reward-allocation-and-development-fund-for-the-next-4-years.html).
 
 Founders’ Rewards of 8% of the block reward has also completely cease as planned. This means that our founders and seed investors have stopped receiving any further block rewards. We would like to thank the founders and seed investors for supporting us throughout this early stage of Firo!
 
@@ -38,19 +38,19 @@ We are confident that the new block reward division will serve Firo well for the
 
 ## Technology
 
-Over the course of 2020 our core wallet has been upgraded with mnemonic seed phrase backup support, [deterministic masternodes](https://firo.org/2020/06/08/zcoin-v14-0-0-release.html), and had a core upgrade and many bug fixes and UI improvements!
+Over the course of 2020 our core wallet has been upgraded with mnemonic seed phrase backup support, [deterministic masternodes]({{ site.baseurl }}/2020/06/08/zcoin-v14-0-0-release.html), and had a core upgrade and many bug fixes and UI improvements!
 
 We now have a more solid code base and with the move to deterministic masternodes, ensures a much more reliable masternode network.
 
-[Lelantus](https://firo.org/2019/04/14/lelantus-firo.html) was released on [testnet](https://firo.org/2020/10/20/lelantus-testnet-is-now-open.html) in October , and is set to [activate on mainnet](https://firo.org/2021/01/06/lelantus-activating-on-firo.html) on 14th January 2021.
+[Lelantus]({{ site.baseurl }}/2019/04/14/lelantus-firo.html) was released on [testnet]({{ site.baseurl }}/2020/10/20/lelantus-testnet-is-now-open.html) in October , and is set to [activate on mainnet]({{ site.baseurl }}/2021/01/06/lelantus-activating-on-firo.html) on 14th January 2021.
 
 ![](/blog/assets/2020-in-review/lelantus-activating-on-firo.png)
 
-Firo’s labs published new paper on [hierarchical one-out-of-many proofs (HOOOMP)](https://firo.org/2020/04/16/paper-on-hierarchical-one-out-of-many-proofs.html) which improves proving time by an order of magnitude.
+Firo’s labs published new paper on [hierarchical one-out-of-many proofs (HOOOMP)]({{ site.baseurl }}/2020/04/16/paper-on-hierarchical-one-out-of-many-proofs.html) which improves proving time by an order of magnitude.
 
-We have also significantly [updated our Lelantus academic paper](https://firo.org/2020/06/09/lelantus-academic-paper-updated.html) to contain security proofs for all cryptographic primitives.
+We have also significantly [updated our Lelantus academic paper]({{ site.baseurl }}/2020/06/09/lelantus-academic-paper-updated.html) to contain security proofs for all cryptographic primitives.
 
-[Lelantus’ cryptographic library was audited by Trail of Bits](https://firo.org/2020/08/13/lelantus-cryptographic-library-audit-results.html). The audit was substantially funded by community donations from the Firo’s Crowdfunding System (CCS) and the balance from the Firo Development Fund.
+[Lelantus’ cryptographic library was audited by Trail of Bits]({{ site.baseurl }}/2020/08/13/lelantus-cryptographic-library-audit-results.html). The audit was substantially funded by community donations from the Firo’s Crowdfunding System (CCS) and the balance from the Firo Development Fund.
 
 ## Exchange Listings
 
@@ -72,13 +72,13 @@ The vast majority of these exchanges listed us on their own accord, or via commu
 
 We [joined the Ren Alliance as a utility partner](https://medium.com/renproject/ren-ecosystem-update-aeef144a52e0), was the first coin after Bitcoin to be added as a funding option to the [Particl Decentralized Marketplace](https://particl.io/)!
 
-[Firo was the first asset supported on the Stakehound](https://firo.org/2020/09/02/bridging-into-defi-with-stakehound-partnership.html) platform that unlocks liquidity in Firo’s Masternodes and bridges us into the DeFi ecosystem.
+[Firo was the first asset supported on the Stakehound]({{ site.baseurl }}/2020/09/02/bridging-into-defi-with-stakehound-partnership.html) platform that unlocks liquidity in Firo’s Masternodes and bridges us into the DeFi ecosystem.
 
 [Zelcore and Firo partnered](https://medium.com/@ZelOfficial/zelcore-zcoin-masternodes-d4223e3d8c8b) to bring an easy way to create, view, and manage your FIRO nodes all in one place!
 
 ![](/blog/assets/locktrip/locktrip-image.png)
 
-In December, [Firo also has partnered](https://firo.org/2020/12/08/firo-partners-with-locktrip.html) with [LockTrip.com](https://locktrip.com/), a blockchain-based travel website which offers up to 60% discounts on more than 2 Million Hotels & Vacation Rentals thanks to its unique reverse-auctioning model!
+In December, [Firo also has partnered]({{ site.baseurl }}/2020/12/08/firo-partners-with-locktrip.html) with [LockTrip.com](https://locktrip.com/), a blockchain-based travel website which offers up to 60% discounts on more than 2 Million Hotels & Vacation Rentals thanks to its unique reverse-auctioning model!
 
 ## Media Coverage, interviews and marketing
 
@@ -111,7 +111,7 @@ A community based [Firo Adoption Working group](https://t.me/zcoinawp) has been 
 
 We had 8 community meetings during 2020 where we cover a large numbers of topics including development roadmaps, budget and funding, research, adoption efforts. The community meetings have all been recorded and uploaded to [YouTube](https://www.youtube.com/c/Firoorg/videos).
 
-As part of our efforts to create sustainable and decentralized funding mechanisms for the Firo project, we joined the Open Source Collective via [OpenCollective](https://firo.org/2020/06/18/open-source-collective-for-sustainable-funding.html). Thank you to everyone who was donated.
+As part of our efforts to create sustainable and decentralized funding mechanisms for the Firo project, we joined the Open Source Collective via [OpenCollective]({{ site.baseurl }}/2020/06/18/open-source-collective-for-sustainable-funding.html). Thank you to everyone who was donated.
 
 We have seen some important decisions being discussed and deliberated in our [forums](https://forum.firo.org//) such as whether to change to the [Firo PoW Algorithm](https://forum.firo.org/t/poll-on-zcoins-pow-algorithm/868) or whether to [temporarily enable sporks until lelantus matures](https://forum.firo.org/t/should-we-enable-spork-functionality-temporarily-until-lelantus-matures/835/27). Make sure to join our forums.
 
