--- a/_posts/2022-07-23-Firo-v014111.md
+++ b/_posts/2022-07-23-Firo-v014111.md
@@ -28,4 +28,4 @@ If you're using the Firo QT wallet, you can see this in action if you enable the
 
 **[Please update immediately.](https://github.com/firoorg/firo/releases/tag/v0.14.11.1)**
 
-Read more about Firo's research [Here](https://firo.org/about/research/)
+Read more about Firo's research [Here]({{ site.baseurl }}/about/research/)
