--- a/_posts/2023-01-12-firo-v014120.md
+++ b/_posts/2023-01-12-firo-v014120.md
@@ -17,7 +17,7 @@ This release includes several bug fixes, including:
 * A fix for the UI size in Ubuntu (issue [#1210](https://github.com/firoorg/firo/pull/1210))
 * An option to hide/unhide RAP Addresses page manually (issue [#1208](https://github.com/firoorg/firo/pull/1208))
 
-You can download the update from the [Firo website](https://firo.org/get-firo/download/).
+You can download the update from the [Firo website]({{ site.baseurl }}/get-firo/download/).
 
 As usual, please **backup your wallet** prior to updating for safety.
 
