--- a/_posts/2024-09-18-hardfork-2024.md
+++ b/_posts/2024-09-18-hardfork-2024.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Firo Hardfork Completed Successfully"
 summary: "Changes to block distribution, emission model and sustainability"
-tags: [dev, news]
+tags: [community, news]
 author: "Reuben Yap"
 img: "/blog/assets/hardfork-2024/banner.png"
 ---
