Replace images with transparent

--- a/_posts/2025-10-20-firo-v014150.md
+++ b/_posts/2025-10-20-firo-v014150.md
@@ -14,13 +14,13 @@ You can download the latest binaries here: [Firo v0.14.15.0 Release on GitHub](h
 
 ### Spark Name Transfers
 
-![Spark name transfer](/blog/assets/firo-v014150/swap-names.jpg)
+![Spark name transfer](/blog/assets/firo-v014150/Swap-Names.png)
 
 This release introduces **Spark Name Transfers**, enabling users to transfer Spark Names directly between wallets. Spark Names serve as human-readable identifiers for Spark Addresses, making private transactions easier to manage while preserving full privacy. This update extends their flexibility when users want to change their Spark Names ownership to someone else or assign it to a different address. This also allows users to sell their Spark Names creating a more vibrant Spark Name economy. A guide will be published soon.
 
 ### GPU memory requirement for FiroPOW
 
-![GPU VRAM](/blog/assets/firo-v014150/mining-upgrade.jpg)
+![GPU VRAM](/blog/assets/firo-v014150/Mining-Upgrade.png)
 
 As per the Firo community’s decision, the memory requirement to mine Firo using a GPU will be dropped to ensure that cards with 8GB of VRAM can still continue to mine Firo. The change supports broader accessibility and strengthens network decentralization by lowering the entry barrier for miners while keeping obsolete hardware out.
 
@@ -29,3 +29,4 @@ As per the Firo community’s decision, the memory requirement to mine Firo usin
 This update also includes **Sigma stripping** which improves load times, increased **Spark Spend limits**, and a **new loading screen** that gives more details on what’s going in the background on startup, among other optimizations and minor improvements.
 
 For a full list of technical details and changelog, please refer to the [release page](https://github.com/firoorg/firo/releases/tag/v0.14.15.0/) on GitHub.
+
